--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "test": "jest"
   },
   "devDependencies": {
-    "jest": "^29.4.0",
-    "node-addon-api": "^5.0.0"
+    "jest": "^29.4.0"
   },
   "dependencies": {
     "cmake-js": "^7.1.1",
     "@types/node": "^20.4.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "node-addon-api": "^5.0.0"
   }
 }
